--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,6 @@ title: "Saad Idrissi — Portfolio Étudiant"
 email: "idrissisaad340@gmail.com"
 description: "Portfolio étudiant cybersécurité : compétences, projets et contact"
 baseurl: "" # laisse vide pour GitHub Pages
-theme: jekyll-theme-cayman
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+- jekyll-remote-theme
