--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,33 @@
+# Site settings
 title: "Saad Idrissi — Portfolio Étudiant"
-email: "idrissisaad340@gmail.com"
 description: "Portfolio étudiant cybersécurité : compétences, projets et contact"
+email: "idrissisaad340@gmail.com"
 baseurl: "/portfolio"
-url: "https://3xpyth0n.github.io"
-remote_theme: pages-themes/cayman@v0.2.0
+²url: "https://3xpyth0n.github.io"
+
+# Theme
+theme: minimal-mistakes-jekyll
 plugins:
-- jekyll-remote-theme
+  - jekyll-feed
+  - jekyll-seo-tag
+  - jekyll-sitemap
+
+# Author
+author:
+  name: "Saad Idrissi"
+  email: "idrissisaad340@gmail.com"
+
+# Social links
+social:
+  github: "3xpyth0n"
+  linkedin: "saaddrs"
+
+# Defaults for pages
+defaults:
+  -
+    scope:
+      path: ""
+      type: "pages"
+    values:
+      layout: "single"
+      author_profile: true
