--- a/_config.yml
+++ b/_config.yml
@@ -1,30 +1,8 @@
 title: "Saad Idrissi — Portfolio Étudiant"
-description: "Portfolio étudiant cybersécurité : compétences, projets et contact"
 email: "idrissisaad340@gmail.com"
-baseurl: "" # <-- ici
+description: "Portfolio étudiant cybersécurité : compétences, projets et contact"
+baseurl: "/portfolio"
 url: "https://3xpyth0n.github.io"
-
-theme: jekyll-theme-cayman
-
-author:
-  name: "Saad Idrissi"
-  email: "idrissisaad340@gmail.com"
-
-social:
-  github: "3xpyth0n"
-  linkedin: "saaddrs"
-
-defaults:
-  -
-    scope:
-      path: ""
-      type: "pages"
-    values:
-      layout: "page"
-      author_profile: true
-
+remote_theme: pages-themes/cayman@v0.2.0
 plugins:
-  - jekyll-feed
-  - jekyll-seo-tag
-  - jekyll-sitemap
-
+- jekyll-remote-theme
